--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+
+  <!--<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">-->
 </head>
 <body>
   <style>
