--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>GithopNg2</title>
+<head manifest="bust">
   <base href="/">
+  <meta charset="utf-8">
+  <meta name="theme-color" content="#000">
+  <title>GithopNg2</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
