chore(build): add link to sw manifest

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
-<head manifest="bust.manifest">
+<head>
   <base href="/">
   <meta charset="utf-8">
   <meta name="theme-color" content="#000">
   <title>GithopNg2</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!--<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">-->
+  <link rel="manifest" href="/ngsw-manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 </head>
 <body>
   <style>
