updates(fonts): swap inconsolata for fira code

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/ngsw-manifest.json">
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
 </head>
 <body>
   <style>
@@ -17,7 +17,7 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      font-family: 'Inconsolata', monospace;
+      font-family: 'Fira Mono', monospace;
       background: linear-gradient(90deg, #F96A00, #FAAB00, #DAF204);
     }
 
