updates(index page): update page title.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="theme-color" content="#000">
-  <title>GithopNg2</title>
+  <title>Tom Hopkins</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/ngsw-manifest.json">
