--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Tom Hopkins</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="manifest" href="/pwa-manifest.json">
+  <link rel="manifest" href="pwa-manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
 </head>
 <body>
